# Busqueda_Ofertas_CV

./: Cargo.toml  Makefile  Ofertas_CV.txt  README.md  README_1.md  codigo.md  docker-composer.yml  test.env
agent_coordinator/: Cargo.toml
agent_coordinator/src/: lib.rs  main.rs
agent_llm/: Cargo.toml
agent_llm/src/: lib.rs  main.rs
agent_tool/: Cargo.toml
agent_tool/src/: lib.rs  main.rs
agent_tool/src/tools/: excel_writer.rs  file_system.rs  mod.rs  pdf_analizer.rs  pdf_analyzer.rs  pdf_parser.rs  web_scraper.rs
agent_ui/: Cargo.toml
agent_ui/src/: lib.rs  main.rs
common/: Cargo.toml  build.rs
common/src/: error.rs  lib.rs  task.rs
common/src/messaging/: mod.rs
common/src/messaging/proto/: agent_messages.proto
launcher/: Cargo.toml
launcher/src/: main.rs
