[workspace]
resolver = "2"
members = [
    "common",
    "agent_coordinator",
    "agent_llm",
    "agent_tool",
    "agent_ui",
    "launcher",
]

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Mensajería
async-nats = "0.42"

# Protobuf
prost = "0.12"
prost-build = "0.14.1"

# Serialización y Datos
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }

# Errores
anyhow = "1"
thiserror = "1"

# Logging y Config
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"

# Crate común del proyecto
common = { path = "./common" }

