[package]
name = "agent_llm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-nats = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }

# Cliente LLM
genai = "0.3.5"

[lib]
name = "agent_llm"
path = "src/lib.rs"

[[bin]]
name = "agent_llm_bin"
path = "src/main.rs"



