[package]
name = "agent_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { workspace = true }
tokio = { workspace = true }
async-nats = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }

# Dependencias específicas de herramientas
pdf-extract = "0.9.0"
reqwest = "0.12.23"
scraper = "0.24.0"
rust_xlsxwriter = "0.90.0"

[lib]
name = "agent_tool"
path = "src/lib.rs"

[[bin]]
name = "agent_tool_bin"
path = "src/main.rs"