[package]
name = "agent_tool"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }


async-nats = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

reqwest = { workspace = true }
scraper = { workspace = true }
pdf-extract = { workspace = true }
rust_xlsxwriter = { workspace = true }

common = { workspace = true }

[lib]
name = "agent_tool"
path = "src/lib.rs"

[[bin]]
name = "agent_tool_bin"
path = "src/main.rs"
