[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = { workspace = true }
async-nats = { workspace = true }
prost = { workspace = true }
bytes = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
prost-build = { workspace = true }




