[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenv = { workspace = true }

agent_coordinator = { path = "../agent_coordinator", package="agent_coordinator" }
agent_llm = { path = "../agent_llm", package="agent_llm" }
agent_tool = { path = "../agent_tool", package="agent_tool" }
agent_ui = { path = "../agent_ui", package="agent_ui" }